# Cmake

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Doxyfile  ExampleProject  Makefile  cmake_install.cmake
configuration/: Dockerfile  build_image.sh  run_container.sh
train0_basic_cmake/src/: main.cpp
train1_mathlib/: CMakeLists.txt  add.c  add.h  compile_by_hand_commands.sh  main.cpp
train2_mathlib/: CMakeLists.txt  mymath.cpp  mymath.h
train2_mathlib/add/: add.c
train2_mathlib/substract/: CMakeLists.txt  substract.cpp  substract.h
train3_test/add/: CMakeLists.txt
train3_test/test/: CMakeLists.txt
train3_test/test/test_data/: CMakeLists.txt
train4_install/: CMakeLists.txt
train4_install/add/: CMakeLists.txt
train4_install/config/: cmake_config.cmake
train4_install/myMath/: CMakeLists.txt  mymath.cpp
train4_install/substract/: CMakeLists.txt  substract.cpp
train4_install/test/add/: CMakeLists.txt  ut_add.cpp
train4_install/test/substract/: CMakeLists.txt  ut_substract.cpp
train4_using_installed/add_subdir/: .gitignore  CMakeLists.txt
train4_using_installed/add_subdir/add/: CMakeLists.txt  add.c
train4_using_installed/add_subdir/config/: cmake_config.cmake  myMathLibConfig.cmake.in
train4_using_installed/add_subdir/myMath/: CMakeLists.txt
train4_using_installed/add_subdir/substract/: CMakeLists.txt
train4_using_installed/add_subdir/test/: ut_mymath.cpp
train4_using_installed/add_subdir/test/test_data/: test_data.h.in
train4_using_installed/find_package/: CMakeLists.txt  main.cpp
